--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   "dependencies": {
     "async": "^2.6.0",
     "express": "^4.16.2",
+    "express-load": "^1.1.16",
     "mongoose": "^5.0.9",
-    "nodemon": "^1.17.1"
+    "nodemon": "^1.17.1",
+    "winston": "^2.4.0"
   }
 }
