--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
   "license": "ISC",
   "dependencies": {
     "async": "^2.6.0",
+    "base-64": "^0.1.0",
     "express": "^4.16.2",
     "express-load": "^1.1.16",
     "mongoose": "^5.0.9",
     "nodemon": "^1.17.1",
+    "querystring": "^0.2.0",
     "winston": "^2.4.0"
   }
 }
