--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "async": "^2.6.0",
     "base-64": "^0.1.0",
+    "chromium": "^1.0.2",
     "express": "^4.16.2",
     "express-load": "^1.1.16",
     "mongoose": "^5.0.9",
