--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "NODE_ENV=development nodemon start"
+    "dev": "NODE_ENV=development nodemon start",
+    "prod": "nodemon start",
+    "start": "nodemon start"
   },
   "keywords": [
     "data-mining",
