--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "NODE_ENV=development nodemon start",
+    "local": "NODE_ENV=local nodemon start",
     "prod": "nodemon start",
     "start": "nodemon start"
   },
