--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mongoose": "^5.0.9",
     "nodemon": "^1.17.1",
     "querystring": "^0.2.0",
+    "simple-statistics": "^5.2.1",
     "winston": "^2.4.0"
   }
 }
