--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "async": "^2.6.0",
     "base-64": "^0.1.0",
     "body-parser": "^1.18.2",
+    "cookie-parser": "^1.4.3",
     "express": "^4.16.2",
     "express-load": "^1.1.16",
     "mongoose": "^5.0.9",
