--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "base-64": "^0.1.0",
     "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
+    "cors": "^2.8.4",
     "express": "^4.16.2",
     "express-load": "^1.1.16",
     "mongoose": "^5.0.9",
