--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "nodemon": "^1.17.1",
     "querystring": "^0.2.0",
     "simple-statistics": "^5.2.1",
+    "urlencode": "^1.1.0",
     "winston": "^2.4.0"
   }
 }
