--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "async": "^2.6.0",
     "base-64": "^0.1.0",
     "body-parser": "^1.18.2",
+    "cloudinary": "^1.11.0",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
     "express": "^4.16.2",
